compiler-tests/src/test/data/diagnostic/dependencygraph/dynamic/DuplicateBindingsInDynamicGraphReportTheCallLocation.fir.ir.diag.txt
/DuplicateBindingsInDynamicGraphReportTheCallLocation.kt:(391,433): error: [Metro/DuplicateBinding] Multiple bindings found for kotlin.String

  DuplicateBindingsInDynamicGraphReportTheCallLocation.kt:13:13
    @Provides fun provideString(): kotlin.String
                                   ~~~~~~~~~~~~~
  DuplicateBindingsInDynamicGraphReportTheCallLocation.kt:15:13
    @Provides fun provideString2(): kotlin.String
                                    ~~~~~~~~~~~~~
